--- a/src/Components/PatentCard/style.scss
+++ b/src/Components/PatentCard/style.scss
@@ -5,12 +5,10 @@
   box-sizing: border-box;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12);
   border-radius: 2px;
+  width: 100%;
 }
 
-.expanded {
-  display: block;
-}
-
-.not-expanded {
-  display: none;
+.card-summary {
+  display: grid;
+  grid-template-columns: 100px 1fr;
 }
