--- a/src/Components/PatentCard/style.scss
+++ b/src/Components/PatentCard/style.scss
@@ -6,9 +6,16 @@
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12);
   border-radius: 2px;
   width: 100%;
+  padding: 1rem;
 }
 
 .card-summary {
   display: grid;
-  grid-template-columns: 100px 1fr;
+  grid-template-columns: 100px 2fr 32px;
+}
+
+.expand-more {
+  & > svg {
+    height: 32px;
+  }
 }
