add api connection and minor labeling tweaks

--- a/src/Components/PatentCard/style.scss
+++ b/src/Components/PatentCard/style.scss
@@ -11,7 +11,7 @@
 
 .card-summary {
   display: grid;
-  grid-template-columns: 100px 2fr 32px;
+  grid-template-columns: 100px 1fr 1fr 1fr 32px;
 }
 
 .expand-more {
